<resources>
   <string name="app_name">XPressOn</string>
   <string name="my_xpresson">My XPressOn</string>
   <string name="hello_world">Hello world!</string>
   <string name="menu_settings">Settings</string>
   <string name="DevelopmentMode">FALSE</string>
   <string name="Logo">Logo</string>
   <string name="about">about</string>
   <string name="start_here">Start here</string>
   <string name="gallery">Choose a Photo</string>
   <string name="gallery_tip">Select Image</string>
   <string name="camera">Take a Photo</string>
   <string name="camera_tip">Take Picture</string>
   <string name="myXON">My Saved Photos</string>
   <string name="myXON_tip">View XPressOn Gallery</string>
   <string name="createXON">Create</string>
   <string name="createXON_tip">Personalize on Design from Creative Artist. COMMING SOON....</string>
   <string name="XONWidgetBackground">#FFFF66</string>
   <string name="XONWidgetSelBackground">#CC66FF</string>
   <string name="image_dialog">View Selected Image</string>
   <string name="title_activity_xon__main__ui">XPressOn</string>
   <string name="delete_image">Delete Image</string>
   <string name="clear_cache_menu">Clear Caches</string>
   <string name="clear_image_complete_toast">Image has been cleared</string>
   <string name="clear_cache_complete_toast">Caches have been cleared</string>
   <string name="imageview_description">Image Thumbnail</string>
   <string name="no_network_connection_toast">No network connection found</string>
   <string name="ImageSharedText">Create using XPressOn</string>
   <string name="share_intent_text">Select appropriate App</string>
   <string name="actions">Actions</string>
   <string name="home">Home</string>
   <string name="orig">Orig</string>
   <string name="rotate">Rotate</string>
   <string name="save_effects">Create</string>
   <string name="crop">Crop</string>
   <string name="save_effects_name">Name (upto 10 chars)</string>
   <string name="num_effects_char">10</string>
   <string name="save_effects_title">Create My Effects</string>
   <string name="image_enhance">Enhance</string>
   <string name="image_enhance_full">Enhance Image</string>
   <string name="quick_effects">Quick Ez</string>
   <string name="image_effects">Effects</string>
   <string name="image_filters">Filters</string>
   <string name="save_share">Save Share</string>
   <string name="save_n_share">Save N Share</string>
   <string name="share">Share XPressOn</string>
   <string name="popular_effects">Popular</string>
   <string name="frame_effects">Frames</string>
   <string name="premium_effects">Premium</string>
   <string name="adv_effects">Advance</string>
   <string name="user_effects">My Effects</string>
   <string name="multi_effects">Multi Effects</string>
   <string name="fade_effects">Fade Effects</string>
   <string name="color_effects">Color Effects</string>
   <string name="funny_effects">Funny Effects</string>
   <string name="light_effects">Light Effects</string>
   <string name="border_filters">Border Filters</string>
   <string name="color_filters">Color Filters</string>
   <string name="distort_filters">Distort Filters</string>
   <string name="blur_filters">Blur Filters</string>
   <string name="title_activity_xon__im__ui">XON_IM_UI</string>
   <string name="title_activity_xon_crop">XON_CROP_UI</string>
   <string name="ok"> OK </string>
   <string name="cancel"> Cancel </string>
   <string name="reset"> Reset </string>
   <string name="image_action_text">Choose Image Actions</string>
   <string name="alert_dialog_ok">OK</string>
   <string name="alert_dialog_cancel">Cancel</string>
   <string-array name="image_action_list">
      <item>Rotate CW</item>
      <item>Rotate CCW</item>
      <item>Show Original</item>
   </string-array>
   <string-array name="image_view_action_list">
      <item>Delete Image</item>
   </string-array>
   <string name="user_effects_actions">Actions for User Saved Effects</string>
   <string-array name="user_effects_action_list">
      <item>Delete Selected User Effect</item>
   </string-array>
   <string name="selected_txt">Select appropriate </string>
   <string name="ImageFilterSelMesg">Image Filter Activated</string>
   <string name="ImageFilterSlideMesg">Slide Finger or Tap on Screen to change the looks</string>
   <string name="CircularFilterSlideMesg">Slide Finger on lower portion of the Screen to change the intensity. Also drag the square to position the Intensity</string>
   <string name="ImageFilterDeSelMesg">Image Filter De-Activated</string>
   <string name="NoImageFilterSel">No Image Filter is Selected</string>
   <string name="NoImageFilterParam">Sliding Finger not needed. Change is applied.</string>
   <string name="NoImageSel">Please select an Image to be saved.</string>
   <string name="SmallImageSavedTitle">Memory Constraint</string>
   <string name="SmallImageSaved">Due to Memory Constraint small Image size is Saved and will take little longer.</string>
   <string name="NoSavedImage">All Images saved using this App can be viewed here. Since no Image is saved, hence this view is not shown.</string>
   <string name="NoImageExists">Image not Found. This happened because image is manually deleted from Memory Card</string>
   <string name="ShowOriginal">Showing the Original Image</string>
   <string name="ShowTransformed">Showing the Transformed Image</string>
   <string name="InfoTitle">Info Message</string>
   <string name="ErrorTitle">Error Occurred</string>
   <string name="PickAColor">Slide On Wheel and Click Center</string>
   <string name="NoActionMesg">No Action Taken</string>
   <string name="FilterNotApplied">This Filter Conflicts with Filter Used</string>
   <string name="NoImageFound">Image Not Found. Redirecting to Main Page. Report Error to support@xpressonnet.com. Appreciate your support</string>
   <string name="NoImageSaved">Unable to save Image. Redirecting to Main Page. Report Error to support@xpressonnet.com. Appreciate your support</string>
   <string name="ImageEffectsNotSaved">Image Effects Not Saved</string>
   <string name="ImageEffectsNotSavedMesg">Image Effects Name is used. Please give a new Name</string>
   <string name="NoSavedEffectsTitle">No Saved Effects</string>
   <string name="NoSavedEffectsMesg">Image Effects and Filters used in any combination can be saved. These effects saved by you will show in Personalized Effects for reuse.</string>
   <string name="FeatureCommingTitle">Feature Coming Soon</string>
   <string name="FeatureCommingMesg">Feature is coming soon.</string>
   <string name="ShowCropMessage">Crop now or later from XPressOn Action Menu</string>
   <string name="ViewImageTry">Unable to Show Image, Retrying</string>
   <string name="NoImageShown">Unable to Show Image and Redirecting to Main Page</string>
   <string name="NoMyXONImageShown">No Image Saved, Redirecting to Main Page</string>
   <string name="NoImageSelTitle">No Image Selected</string>
   <string name="NoImageSelMesg">Please Selected Image from the Gallery. Redirecting to Main Page</string>
   <string name="CannotSaveEffects">Cannot Create My Effects as no Effects or Filters are selected.</string>
   <string name="NoImagePathTitle">No Image Found</string>
   <string name="NoImagePathMesg">Unable to retrieve the selected image from the Gallery. Redirecting to Main Page</string>
   <string name="UnableToRate">Unable to connect to Google Play. Sorry for inconvinience.</string>
   <string name="AboutXON">About XPressOn</string>
   <string name="AboutXONMesg">XPressOn is an Image Editing App with 1000s of Image Effects and Filters. Its free with no ads.\n\nXPressOn vision is to do more with the pictures you have taken by auto-plugging your pictures into Designs created by Professional Designers.\n\nIt will be of immense help if you can review our app in Google Play, give us your feedback, like us on Facebook Page and refer your Friends. All this you can do from XPressOn App itself by clicking on the image that appear in the home page.\n\nThanks for your support.\nXPressOn Team</string>
   <string-array name="quick_fix_image_settings">
      <item>AvgPixel:=0::Brightness:=0.7::Contrast:=0.6::Bias:=0.8</item>
      <item>AvgPixel:=32::Brightness:=0.6::Contrast:=0.6::Bias:=0.7</item>
      <item>AvgPixel:=64::Brightness:=0.6::Contrast:=0.6::Bias:=0.7</item>
      <item>AvgPixel:=128::Brightness:=0.6::Contrast:=0.6::Bias:=0.4</item>
      <item>AvgPixel:=160::Brightness:=0.6::Contrast:=0.6::Bias:=0.4</item>
      <item>AvgPixel:=192::Brightness:=0.6::Contrast:=0.6::Bias:=0.4</item>
      <item>AvgPixel:=224::Brightness:=0.4::Contrast:=0.6::Bias:=0.3</item>
      <item>AvgPixel:=255::Brightness:=0.4::Contrast:=0.6::Bias:=0.3</item>
   </string-array>
   <string-array name="quick_fix_image_gain_settings">
      <item>AvgPixel:=0::Gain:=0.4::Brightness:=1.3</item>
      <item>AvgPixel:=32::Gain:=0.4::Brightness:=1.0</item>
      <item>AvgPixel:=64::Gain:=0.4::Brightness:=0.7</item>
      <item>AvgPixel:=128::Gain:=0.4::Brightness:=0.6</item>
      <item>AvgPixel:=160::Gain:=0.4::Brightness:=0.6</item>
      <item>AvgPixel:=192::Gain:=0.4::Brightness:=0.6</item>
      <item>AvgPixel:=224::Gain:=0.4::Brightness:=0.4</item>
      <item>AvgPixel:=255::Gain:=0.4::Brightness:=0.4</item>
   </string-array>
   <string-array name="MainViewData">
      <item>ImgRes:=xon_main_page_logo::TextRes:=xon_main_page_logo_text::Action:=ShowAboutXON</item>
      <item>ImgRes:=suggestion_box::TextRes:=suggestion_text::Action:=Feedback</item>
      <item>ImgRes:=google_app_review::TextRes:=google_app_rev_txt::Action:=GoogleAppReview</item>
      <item>ImgRes:=like_us::TextRes:=like_us_txt::Action:=FollowOnFB</item>
      <item>ImgRes:=refer_friend::TextRes:=refer_friend_txt::Action:=ReferFriend</item>
      
   </string-array>
   <string name="xon_main_page_logo_text">Use XPressOn to bring life to ur photographs on ur Mobile</string>
   <string name="suggestion_text">We would love to hear your suggestion. Thankyou for your feedback.</string>
   <string name="google_app_rev_txt">Please review us in Google Play</string>
   <string name="like_us_txt">Like us on Facebook</string>
   <string name="refer_friend_txt">Refer your Friend to download XPressOn App</string>
   <string name="refer_friend_mesg">Get XPressOn App for Android to quickly fix your picture, apply effects, filters, borders, etc to create stunning photo and share it on Facebook, Email, WhatsApp, etc.<p>Download for free https://play.google.com/store/apps/details?id=com.xpresson.android</p></string>
   <string name="XONFBPage">http://www.facebook.com/xpressonapp</string>
   <string-array name="XONShareProperties">
      <item>Action:=Feedback::EMailTo:=narayan@xpressonnet.com::EmailSub:=XPressOn Feedback</item>
      
   </string-array>
</resources>