<RelativeLayout 
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/layout_root"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   style="@style/XONInnerBodyBackground"
>

   <RelativeLayout 
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/top_control_panel"
	   android:orientation="horizontal"
	   android:layout_width="fill_parent"
	   android:layout_height="52dip" 
      android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
      android:layout_centerHorizontal="true"
	   android:gravity="center_vertical"
	   style="@style/XONTitleBackground"
   >    
      <Button
	      android:id="@+id/home_btn" 
	      style="@style/XONHomeButton"
	      android:layout_alignParentTop="true"
	      android:layout_alignParentLeft="true"
	      android:layout_width="wrap_content" 
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="0dip"
		   android:padding="5dip"
         android:paddingLeft="3dip"
	      android:drawableTop="@drawable/xon_logo"
	      android:text="@string/actions"
	      android:contentDescription="@string/home"
      />    
      <Button
         android:id="@+id/basic_popular_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/home_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/basic_popular_effects"
         android:text="@string/popular_effects"
         android:contentDescription="@string/popular_effects"    
      />    
      <Button
         android:id="@+id/basic_frame_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/basic_popular_effects_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/basic_frame_effects"
         android:text="@string/frame_effects"
         android:contentDescription="@string/frame_effects"    
      />    
      <Button
         android:id="@+id/basic_user_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/basic_frame_effects_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/basic_user_effects"
         android:text="@string/user_effects"
         android:contentDescription="@string/user_effects"    
      />          
      <Button
         android:id="@+id/basic_adv_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/basic_user_effects_btn"
         android:paddingTop="5dip"
         android:paddingBottom="5dip"
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
         android:drawableTop="@drawable/basic_adv_effects"
         android:text="@string/adv_effects"
         android:contentDescription="@string/adv_effects"    
      />    
      <Button
         android:id="@+id/basic_image_save_share_btn" 
         style="@style/XONButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/basic_adv_effects_btn"
	      android:paddingTop="5dip"
	      android:paddingBottom="5dip"
         android:paddingLeft="5dip"
         android:paddingRight="5dip"
         android:drawableTop="@drawable/save_share"
         android:text="@string/save_share"
         android:contentDescription="@string/save_share"    
      />          
      <Button
         android:id="@+id/image_enhance_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/home_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/image_enhance"
         android:text="@string/image_enhance"
         android:contentDescription="@string/image_enhance"    
      />    
      <Button
         android:id="@+id/quick_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/image_enhance_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/quick_effects"
         android:text="@string/quick_effects"
         android:contentDescription="@string/quick_effects"    
      />    
      <Button
         android:id="@+id/image_effects_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/quick_effects_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/image_effects"
         android:text="@string/image_effects"
         android:contentDescription="@string/image_effects"    
      />    
      <Button
         android:id="@+id/image_filters_btn" 
         style="@style/XONTopButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/image_effects_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/image_filter"
         android:text="@string/image_filters"
         android:contentDescription="@string/image_filters"    
      />          
      <Button
         android:id="@+id/image_save_share_btn" 
         style="@style/XONButton"
         android:visibility="invisible"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginRight="0dip"
         android:layout_toRightOf="@id/image_filters_btn"
         android:padding="5dip"
         android:drawableTop="@drawable/save_share"
         android:text="@string/save_n_share"
         android:contentDescription="@string/save_n_share"    
      />          
   </RelativeLayout>
   
   <ScrollView
      android:id="@+id/home_btn_scroll" 
      android:visibility="invisible"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:paddingTop="3dip"
      android:layout_below="@id/top_control_panel"
      style="@style/XONSubTitleBackground"
   >
      <LinearLayout
        android:id="@+id/layout_home_btn_scroll" 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      >
         <Button
            android:id="@+id/xon_main_btn" 
            style="@style/XONHomeMenuButton"
            android:drawableTop="@drawable/xon_main_page"
            android:text="@string/home"
         />              
         <Button
            android:id="@+id/xon_orig_btn" 
            style="@style/XONHomeMenuButton"
            android:drawableTop="@drawable/orig_image"
            android:text="@string/orig"
         />              
         <Button
            android:id="@+id/xon_rot_btn" 
            style="@style/XONHomeMenuButton"
            android:drawableTop="@drawable/xon_rotate"
            android:text="@string/rotate"
         />              
         <Button
            android:id="@+id/xon_save_btn" 
            style="@style/XONHomeMenuButton"
            android:drawableTop="@drawable/save_effects"
            android:text="@string/save_effects"
         />   
         <Button
            android:id="@+id/xon_crop_btn" 
            style="@style/XONHomeMenuButton"
            android:drawableTop="@drawable/xon_crop"
            android:text="@string/crop"
         />   
      </LinearLayout>        
   </ScrollView>
          
   <ScrollView
      android:id="@+id/quick_effects_scroll" 
      android:visibility="invisible"
      android:layout_height="58dp"
      android:layout_width="fill_parent"
      android:paddingTop="3dip"
      android:paddingBottom="3dip"
      android:layout_below="@id/top_control_panel"
      style="@style/XONSubTitleBackground"
   >
      <LinearLayout
        android:id="@+id/layout_quick_effects_scroll" 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      >
         <Button
            android:id="@+id/popular_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/popular_effects"
            android:text="@string/popular_effects"
            android:contentDescription="@string/popular_effects"    
         />              
         <Button
            android:id="@+id/frame_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/frame_effects"
            android:text="@string/frame_effects"
            android:contentDescription="@string/frame_effects"    
         />              
         <Button
            android:id="@+id/adv_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/adv_effects"
            android:text="@string/adv_effects"
            android:contentDescription="@string/adv_effects"    
         />              
         <Button
            android:id="@+id/user_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/user_effects"
            android:text="@string/user_effects"
            android:contentDescription="@string/user_effects"    
         />         
      </LinearLayout>        
   </ScrollView>
   
   <ScrollView
      android:id="@+id/image_effects_scroll" 
      android:visibility="invisible"
      android:layout_height="58dp"
      android:layout_width="fill_parent"
      android:paddingTop="3dip"
      android:paddingBottom="3dip"
      android:layout_below="@id/top_control_panel"
      style="@style/XONSubTitleBackground"
   >
      <LinearLayout
        android:id="@+id/layout_effects_scroll" 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      >
	      <Button
	         android:id="@+id/fade_effects_btn" 
            style="@style/XONMenuButton"
	         android:drawableTop="@drawable/fade_effects"
	         android:text="@string/fade_effects"
	         android:contentDescription="@string/fade_effects"    
	      />              
         <Button
            android:id="@+id/color_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/color_effects"
            android:text="@string/color_effects"
            android:contentDescription="@string/color_effects"    
         />              
         <Button
            android:id="@+id/funny_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/funny_effects"
            android:text="@string/funny_effects"
            android:contentDescription="@string/funny_effects"    
         />              
         <Button
            android:id="@+id/light_effects_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/light_effects"
            android:text="@string/light_effects"
            android:contentDescription="@string/light_effects"    
         />              
         
      </LinearLayout>        
   </ScrollView>
   
   <ScrollView
      android:id="@+id/image_filters_scroll" 
      android:visibility="invisible"
      android:layout_height="58dp"
      android:layout_width="fill_parent"
      android:paddingTop="3dip"
      android:paddingBottom="3dip"
      android:layout_below="@id/top_control_panel"
      style="@style/XONSubTitleBackground"
   >
      <LinearLayout
        android:id="@+id/layout_filters_scroll" 
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
      >
         <Button
            android:id="@+id/border_filters_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/border_filters"
            android:text="@string/border_filters"
            android:contentDescription="@string/border_filters"    
         />              
         <Button
            android:id="@+id/color_filters_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/color_filters"
            android:text="@string/color_filters"
            android:contentDescription="@string/color_filters"
         />              
         <Button
            android:id="@+id/distort_filters_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/distort_filters"
            android:text="@string/distort_filters"
            android:contentDescription="@string/distort_filters"    
         />              
         <Button
            android:id="@+id/blur_filters_btn" 
            style="@style/XONMenuButton"
            android:drawableTop="@drawable/blur_filters"
            android:text="@string/blur_filters"
            android:contentDescription="@string/blur_filters"    
         />                       
      </LinearLayout>        
   </ScrollView>
   
   <com.xpresson.android.util.XONHorzScrollView 
      android:id="@+id/filter_listview" 
      android:layout_width="fill_parent" 
      android:layout_height="85dip" 
      android:layout_alignParentBottom="true" 
      android:layout_alignParentLeft="true"      
      android:paddingLeft="5dip" android:paddingRight="5dip"
      android:background="#FFFF66"
      android:gravity="left"
      android:visibility="invisible"
   ></com.xpresson.android.util.XONHorzScrollView>   
   
   <ImageView 
      android:layout_below="@id/top_control_panel"
      android:layout_above="@id/filter_listview"
      android:id="@+id/sel_image_view" 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:contentDescription="@string/image_dialog"
      android:visibility="invisible"
   />
   
   <!-- The FrameLayout control is used to hold the custom View that will draw an image. -->
   <FrameLayout
      android:layout_below="@id/top_control_panel"
      android:layout_above="@id/filter_listview"
      android:id="@+id/xon_graphics_holder"
      android:layout_height="match_parent"
      android:layout_width="match_parent">      
      <ProgressBar
         android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
         android:layout_gravity="center" />
   </FrameLayout>
 
</RelativeLayout>
   